--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -1,11 +1,6 @@
 /* =============
     Mixins
 ============= */
-/* ---------------- Font Sizing ---------------- */
-html {
-  font-size: 100%;
-}
-
 /* ---------------- Media Queries ---------------- */
 /* =============
     Variables
@@ -330,6 +325,11 @@ template {
 /* =============
     Typography
 ============= */
+h1 {
+  font-family: "Inter", sans-serif;
+  font-weight: 100;
+}
+
 /* =============
     Buttons
 ============= */
