--- a/dev/scss/helpers/_variables.scss
+++ b/dev/scss/helpers/_variables.scss
@@ -22,3 +22,10 @@ $screen-xl-min: 1200px;
   --white: #ffffff;
 }
 
+//SMEG Colors
+$blue: #5B6A87;
+$yellow: #E6D17B;
+$darkgray: #434343;
+$lightgray: #D9D9D9;
+$text: #434343;
+
