--- a/dev/scss/base/_typography.scss
+++ b/dev/scss/base/_typography.scss
@@ -1,3 +1,17 @@
 /* =============
     Typography
 ============= */
+
+@mixin headline {
+    font-family: 'Inter', sans-serif;
+    font-weight: 100;
+}
+
+@mixin button {
+    font-family: 'Inter', sans-serif;
+    font-weight: 700;
+}
+
+h1{
+    @include headline;
+}
