--- a/dev/scss/base/_typography.scss
+++ b/dev/scss/base/_typography.scss
@@ -5,11 +5,19 @@
 @mixin headline {
     font-family: 'Inter', sans-serif;
     font-weight: 100;
+    font-size: 40pt;
 }
 
-@mixin button {
+@mixin button1-text {
     font-family: 'Inter', sans-serif;
     font-weight: 700;
+    font-size: 24pt;
+}
+
+@mixin button2-text {
+    font-family: 'Inter', sans-serif;
+    font-weight: 700;
+    font-size: 20pt;
 }
 
 h1{
