--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -19,3 +19,8 @@
 @import "layout/_footer";
 
 // Sections Styles
+@import "sections/_hero";
+@import "sections/_selection";
+@import "sections/_reviews";
+@import "sections/_more";
+@import "sections/_buynow";
