--- a/dev/scss/base/_base.scss
+++ b/dev/scss/base/_base.scss
@@ -2,4 +2,25 @@
     Base
 ============= */
 
+ul {
+    list-style: none;
+    padding: 0px;
+    margin: 0px;
+}
 
+@mixin site-padding{
+    padding: 40px 20px;
+
+    @include lg{
+        padding: 100px 100px;
+    }
+
+}
+
+img{
+    max-width: 100%;
+}
+
+section{
+    @include site-padding;
+}
