--- a/dev/scss/sections/_hero.scss
+++ b/dev/scss/sections/_hero.scss
@@ -1,3 +1,10 @@
-button{
+a{
     @include button2;
+}
+
+h1{
+    font-family: 'Inter', sans-serif;
+    font-weight: 100;
+    font-size: 64pt;
+    color: $text;
 }
