--- a/dev/scss/components/_buttons.scss
+++ b/dev/scss/components/_buttons.scss
@@ -27,9 +27,13 @@
 @mixin button2{
     background-color: $blue;
     padding: 8px 24px;
+    width: 220px;
     color: white;
     text-decoration: none;
     display: inline-block;
+    align-items: center;
+    text-align: center;
+    border-radius: 12px;
 
     @include button2-text;
     
