--- a/dev/scss/base/_normalize.scss
+++ b/dev/scss/base/_normalize.scss
@@ -75,6 +75,9 @@ pre {
 
 a {
   background-color: transparent;
+  color: black;
+  text-decoration-style: none;
+  text-decoration-line: none;
 }
 
 /**
