--- a/dev/scss/components/_navigation.scss
+++ b/dev/scss/components/_navigation.scss
@@ -8,6 +8,8 @@ header {
     align-items: center;
     justify-content: space-between;
 
+    @include site-padding;
+
 
     #logo-text {
 
@@ -24,37 +26,21 @@ header {
         display: block;
         position: relative;
         z-index: 3;
+        margin-right: 12px;
 
 
         #burgerBtn {
 
-            display: block;
+        display: flex;
+        flex-direction: column;
+        gap: 6px;
+        position:relative;
 
-            span,
-            span::before,
-            span::after {
+            div{
                 height: 4px;
                 width: 24px;
                 background-color: black;
                 border-radius: 4px;
-
-            }
-
-            span {
-                display: block;
-                position: relative;
-
-                &::before {
-                    position: absolute;
-                    content: " ";
-                    top: -10px;
-                }
-
-                &::after {
-                    position: absolute;
-                    content: " ";
-                    top: 10px;
-                }
             }
         }
 
@@ -70,6 +56,22 @@ header {
         &.show-menu{
             display: inline;
         }
+
+        @media only screen and (max-width: 1024px) {
+            background-color: $blue;
+            color: white;
+            transition:.3s;
+            height: 100vw;
+            width: 80%;
+            position: absolute;
+            top: 0;
+            right: -100%;
+        }
+  
+            &.show-menu{
+                right:0;
+                transition:.3s;
+            }
 
         @include lg {
             display: inline-flex;
