--- a/dev/scss/components/_navigation.scss
+++ b/dev/scss/components/_navigation.scss
@@ -7,8 +7,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-
-    @include site-padding;
+    padding: 24px;
 
 
     #logo-text {
@@ -59,13 +58,24 @@ header {
 
         @media only screen and (max-width: 1024px) {
             background-color: $blue;
-            color: white;
             transition:.3s;
             height: 100vw;
             width: 80%;
             position: absolute;
             top: 0;
             right: -100%;
+            font-family: 'Inter', sans-serif;
+            font-weight: 400;
+            font-size: 40pt;
+            a {
+                color: white;
+            }
+
+
+            input{
+                display: none;
+            }
+    
         }
   
             &.show-menu{
@@ -101,5 +111,9 @@ header {
             }
 
         }
+    }
+
+    #cart-container{
+        margin-left: 24px;
     }
 }
