--- a/dev/scss/sections/_more.scss
+++ b/dev/scss/sections/_more.scss
@@ -1,7 +1,27 @@
 #more{
 
-    a{
-        @include button2;
+    img{
+        margin-top: 32px;
     }
+
+    
+        a{
+        @include button2;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        margin: 24px;
+        }
+
+
+    #items{
+
+        @include lg{ 
+            display: flex;
+            flex-direction: row;
+    }
+}
+    
 
 }
