--- a/dev/scss/sections/_buynow.scss
+++ b/dev/scss/sections/_buynow.scss
@@ -28,7 +28,10 @@ div{
     display: flex;
 
     img{
-        width: 20%;
+        width: 15%;
+        height: 15%;
+        margin-left: 16px;
+        align-items: center;
     }
 
     a{
