--- a/dev/scss/layout/_footer.scss
+++ b/dev/scss/layout/_footer.scss
@@ -4,6 +4,18 @@
 
 footer{
 
-    background-color: gold;
+    font-family: 'Inter', sans-serif;
+    font-weight: 100;
+    color: $text;
+    text-align: center;
+
+    margin-top: 24px;
+    border-top: 1px solid $text;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 72px; 
 
 }
