--- a/dev/scss/sections/_selection.scss
+++ b/dev/scss/sections/_selection.scss
@@ -1,115 +1,154 @@
-#selection{
+#selection {
 
 
-.size-button{
-    @include button1;
-}
-
-.small-button{
-    @include button2;
-}
-
-h2{
-    font-family: 'Inter', sans-serif;
-    font-weight: 100;
-    font-size: 40pt;
-    color: $text;
-}
-
-#features{
-
-    text-align: center;
-    margin-right: 24px;
-
-    h3{
-        font-family: 'Inter', sans-serif;
-        font-weight: 700;
-        font-size: 24pt;
-        color: $text;
+    .size-button {
+        @include button1;
     }
 
-    p{
-        font-family: 'Inter', sans-serif;
-        font-weight: 400;
-        font-size: 16pt;
-        color: $text;
+    .small-button {
+        @include button2;
     }
 
-    @include lg{
-        text-align: right;
-    }
-}
-
-#colors{
-    p{
-        font-family: 'Inter', sans-serif;
-        font-weight: 400;
-        font-size: 16pt;
-        color: $text;
-    }
-
-    ul{
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        margin-left: 50px;
-        margin-right: 50px;
-        li{
-            div{
-                height: 90px;
-                width: 90px;
-                border-radius: 100%;
-                background-color: black;
-            }
-            &:nth-child(1) div{background-color:#D9D9D9;}
-            &:nth-child(2) div{background-color:#000000;}
-            &:nth-child(3) div{background-color:#F3ECDF;}
-            &:nth-child(4) div{background-color:#C5D4DF;}
-            &:nth-child(5) div{background-color:#AEC8BD;}
-            &:nth-child(6) div{background-color:#E4BDCF;}
-            &:nth-child(7) div{background-color:#AE2422;}
-            &:nth-child(8) div{
-                background-color:#FFFFFF;
-                border:#000000 solid 1px;
-            }
-            &:nth-child(9) div{background-color:#555555;}
-        }
-
-        @include lg{
-            width:500px
-        }
-    }
-
-}
-
-#sizes{
-
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
-    margin-bottom: 24px;
-
-    p{
+    h2 {
         font-family: 'Inter', sans-serif;
         font-weight: 100;
-        font-size: 16pt;
+        font-size: 40pt;
         color: $text;
     }
-    
-    .size-option{
-        display: flex;
-        flex-direction: row;
+
+    #features {
+
+        text-align: center;
+        margin-right: 24px;
+
+        h3 {
+            font-family: 'Inter', sans-serif;
+            font-weight: 700;
+            font-size: 24pt;
+            color: $text;
+        }
+
+        p {
+            font-family: 'Inter', sans-serif;
+            font-weight: 400;
+            font-size: 16pt;
+            color: $text;
+        }
+
+        @include lg {
+            text-align: right;
+        }
     }
+
+    #colors {
+        p {
+            font-family: 'Inter', sans-serif;
+            font-weight: 400;
+            font-size: 16pt;
+            color: $text;
+        }
+
+        ul {
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+            margin-left: 50px;
+            margin-right: 50px;
+
+            li {
+                div {
+                    height: 90px;
+                    width: 90px;
+                    border-radius: 100%;
+                    background-color: black;
+                }
+
+                &:nth-child(1) div {
+                    background-color: #D9D9D9;
+                }
+
+                &:nth-child(2) div {
+                    background-color: #000000;
+                }
+
+                &:nth-child(3) div {
+                    background-color: #F3ECDF;
+                }
+
+                &:nth-child(4) div {
+                    background-color: #C5D4DF;
+                }
+
+                &:nth-child(5) div {
+                    background-color: #AEC8BD;
+                }
+
+                &:nth-child(6) div {
+                    background-color: #E4BDCF;
+                }
+
+                &:nth-child(7) div {
+                    background-color: #AE2422;
+                }
+
+                &:nth-child(8) div {
+                    background-color: #FFFFFF;
+                    border: #000000 solid 1px;
+                }
+
+                &:nth-child(9) div {
+                    background-color: #555555;
+                }
+            }
+
+            @include lg {
+                width: 500px
+            }
+        }
+
+    }
+
+    #sizes {
+
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+        margin-bottom: 24px;
+
+        p {
+            font-family: 'Inter', sans-serif;
+            font-weight: 100;
+            font-size: 16pt;
+            color: $text;
+        }
+
+        .size-option {
+            display: flex;
+            flex-direction: row;
+        }
+    }
+
+    @include lg {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        margin-left: 50px;
+        margin-right: 50px;
+    }
+
+    .small-button {
+        margin: 24px;
+    }
+
 }
 
-@include lg{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    margin-left: 50px;
-    margin-right: 50px;
+.small-button {
+    @include button2;
+    margin-bottom: 72px;
 }
 
-.small-button{
-    margin: 24px;
-}
-
+.inlinecenter {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 24px;
 }
